2006-09-25  Kristian Rietveld  <kris@imendio.com>

	Sync with upstream.

	* gtk/gtktreemodelsort.c (gtk_tree_model_sort_finalize):
	Don't leak default_sort_data.  (#346341, Christian Weiske)

	* gtk/gtktreemodelfilter.c (gtk_tree_model_filter_finalize):-
	Clean up user data.  (#344624, Christian Weiske)

	* gtk/gtktreemodelfilter.c (gtk_tree_model_filter_fetch_child):
	update the refs from children to parents for all nodes, since
	they may all have been moved by the insert operation. (#346800,
	patch from Jonathan Matthew).

2006-09-25  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* gdk/x11/gdkdisplay-x11.c (gdk_display_x11_finalize): Replace invalid
	g_object_unref() with g_free() (#357566)

2006-09-25  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkwidget.c (gtk_widget_set_extension_events_internal): New
	function which recursively sets extension events for all GdkWindows
	belonging to the widget.
	(gtk_widget_realize): Use it from here.

2006-09-25  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/*.c (*_realize): Revert commit r6410 from 2006-09-18 as it's
	stupid.
	
2006-09-21  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkwidget.c (gtk_widget_tap_and_hold_setup,
	tap_and_hold_free_data): ref+sink and unref the menu instead of
	destroying it. Avoids crashing on showing the menu after a child
	widget has been removed from container.  NB#41002

2006-09-21  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkmenu.c (gtk_menu_popup): if no item is selected, select the
	first one. NB#4379

2006-09-21  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtktreeview.c (gtk_tree_view_bin_expose): Revert commit 154 as
	the graphics are improved and passive focus is clearly distinguishable
	from unselected. NB#22069

2006-09-21  Xan Lopez  <xan.lopez@nokia.com>

	* gtk/gtkstyle.c (draw_insertion_cursor): 
	Change the x coord of the cursor at line start so it's completely visible
	when we offset it. Fixes NB#38922.
