@@ -1,3 +1,8 @@
+2006-10-02  Tommi Komulainen  <tommi.komulainen@nokia.com>
+
+	* gtk/gtktreeview.c (update_checkbox_mode): Stop memory leak after
+	losing a pointer to list start. NB#41908
+
 2006-09-25  Kristian Rietveld  <kris@imendio.com>
 
 	Sync with upstream.
